# ip-lookup

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  coverage.sh
include/: btree.h  ip.h  ip_unittest.h
src/: CMakeLists.txt  btree.c  client.c  ip.c  main.cpp  server.c
test/: CMakeLists.txt  btree.cpp  ip.cpp  iphelper.cpp  ipv4.cpp  ipv6.cpp
test/data/: inbound_v6.txt  ipv4list.txt  ipv4range.txt  ipv6list.txt  ipv6range.txt  ipv6single.txt
